# tictactoe

./: .clang-format  .gitignore  CMakeLists.txt
assets/: cross.xcf
cmake/: Conan.cmake
src/: CMakeLists.txt  main.cpp  solarized.cpp  solarized.hpp
